# game-of-life

./: CMakeLists.txt  LICENSE  README  README.md
.github/workflows/: cmake-single-platform.yml
files/: game-of-life.desktop
packaging/arch/: PKGBUILD
src/: game.c  game.h  main.c  model.c  model.h  util.h  window.c  window.h
